[tool.poetry]
name = "todo-application-kivymd"
version = "0.1.0"
description = "A simple todo application made using kivymd"
authors = ["Ngonie-x, Dmitry Uzunov <duyz@bmm.ru>"]
readme = "README.md"
packages = [{include = "todo_application_kivymd"}]

[tool.poetry.dependencies]
python = "==3.10.10"
Kivy = "^2.0.0"
kivymd = "^0.104.2"
pymssql = "^2.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
