[tool.poetry]
name = "todo-application-kivymd"
version = "0.1.0"
description = "A simple todo application made using kivymd"
authors = ["Nzenze <ngonidzashedelight@gmail.com>, Dmitry Uzunov <duyz@bmm.ru>"]
readme = "README.md"
packages = [{include = "todo_application_kivymd"}]

[tool.poetry.dependencies]
python = "==3.10.10"
kivymd = "^1.1.1"

[tool.poetry.group.dev.dependencies]
Cython = "^0.29.33"
buildozer = {git = "https://github.com/kivy/buildozer"}
pytest = "^7.2.2"
python-for-android = "^2023.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
